Refactor templates to modern format

--- a/templates/binary_sensors/bright.yaml
+++ b/templates/binary_sensors/bright.yaml
@@ -4,43 +4,74 @@
 ####################################
 # Bright Binary Sensors
 ####################################
-- unique_id: bathroom_bright
-  name: "Bathroom Bright"
+- unique_id: area_bathroom_bright
+  name: "Area - Bathroom Bright"
   device_class: light
-  state: >-
-    {{ (states('sensor.bathroom_multisensor_illuminance') | float) >= (states('input_number.bathroom_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.bathrom_lights', 'off')) }}
-- unique_id: bedroom_bright
-  name: "Bedroom Bright"
+  attributes:
+    current_illuminance: "{{ (states('sensor.area_bathroom_illuminance') | float) }}"
+    light_state: "{{ states('light.bathroom_lights') }}"
+    sun: "{{ states('sun.sun') }}"
+  state: "{{ (states('sensor.area_bathroom_illuminance') | float) >= (states('input_number.area_bathroom_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.bathroom_lights', 'off')) }}"
+
+- unique_id: area_bedroom_bright
+  name: "Area - Bedroom Bright"
   device_class: light
-  state: >-
-    {{ (states('sensor.bedroom_trisensor_illuminance') | float) >= (states('input_number.bedroom_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.bedroom_lights', 'off')) }}
-- unique_id: entrance_bright
-  name: "Entrance Bright"
+  attributes:
+    current_illuminance: "{{ (states('sensor.area_bedroom_illuminance') | float) }}"
+    light_state: "{{ states('light.bedroom_lights') }}"
+    sun: "{{ states('sun.sun') }}"
+  state: "{{ (states('sensor.area_bedroom_illuminance') | float) >= (states('input_number.area_bedroom_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.bedroom_lights', 'off')) }}"
+
+- unique_id: area_entrance_bright
+  name: "Area - Entrance Bright"
   device_class: light
-  state: >-
-    {{ (states('sensor.fire_tablet_illuminance') | float) >= (states('input_number.entrance_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.entrance_lights', 'off')) }}
-- unique_id: hall_bright
-  name: "Hall Bright"
+  attributes:
+    current_illuminance: "{{ (states('sensor.area_entrance_illuminance') | float) }}"
+    light_state: "{{ states('light.entrance_lights') }}"
+    sun: "{{ states('sun.sun') }}"
+  state: "{{ (states('sensor.area_entrance_illuminance') | float) >= (states('input_number.area_entrance_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.entrance_lights', 'off')) }}"
+
+- unique_id: area_hall_bright
+  name: "Area - Hall Bright"
   device_class: light
-  state: >-
-    {{ (states('sensor.hall_trisensor_illuminance') | float) >= (states('input_number.hall_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.hall_lights', 'off')) }}
-- unique_id: kitchen_bright
-  name: "Kitchen Bright"
+  attributes:
+    current_illuminance: "{{ (states('sensor.area_hall_illuminance') | float) }}"
+    light_state: "{{ states('light.hall_lights') }}"
+    sun: "{{ states('sun.sun') }}"
+  state: "{{ (states('sensor.area_hall_illuminance') | float) >= (states('input_number.area_hall_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.hall_lights', 'off')) }}"
+
+- unique_id: area_kitchen_bright
+  name: "Area - Kitchen Bright"
   device_class: light
-  state: >-
-    {{ (states('sensor.kitchen_trisensor_illuminance') | float) >= (states('input_number.kitchen_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.kitchen_lights', 'off')) }}
-- unique_id: lounge_bright
-  name: "Lounge Bright"
+  attributes:
+    current_illuminance: "{{ (states('sensor.area_kitchen_illuminance') | float) }}"
+    light_state: "{{ states('light.kitchen_lights') }}"
+    sun: "{{ states('sun.sun') }}"
+  state: "{{ (states('sensor.area_kitchen_illuminance') | float) >= (states('input_number.area_kitchen_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.kitchen_lights', 'off')) }}"
+
+- unique_id: area_lounge_bright
+  name: "Area - Lounge Bright"
   device_class: light
-  state: >-
-    {{ (states('sensor.lounge_trisensor_illuminance') | float) >= (states('input_number.lounge_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.lounge_lights', 'off')) }}
-- unique_id: study_bright
-  name: "Study Bright"
+  attributes:
+    current_illuminance: "{{ (states('sensor.area_lounge_illuminance') | float) }}"
+    light_state: "{{ states('light.lounge_lights') }}"
+    sun: "{{ states('sun.sun') }}"
+  state: "{{ (states('sensor.area_lounge_illuminance') | float) >= (states('input_number.area_lounge_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.lounge_lights', 'off')) }}"
+
+- unique_id: area_study_bright
+  name: "Area - Study Bright"
   device_class: light
-  state: >-
-    {{ (states('sensor.study_trisensor_illuminance') | float) >= (states('input_number.study_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.study_lights', 'off')) }}
-- unique_id: toilet_bright
-  name: "Toilet Bright"
+  attributes:
+    current_illuminance: "{{ (states('sensor.area_study_illuminance') | float) }}"
+    light_state: "{{ states('light.study_lights') }}"
+    sun: "{{ states('sun.sun') }}"
+  state: "{{ (states('sensor.area_study_illuminance') | float) >= (states('input_number.area_study_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.study_lights', 'off')) }}"
+
+- unique_id: area_toilet_bright
+  name: "Area - Toilet Bright"
   device_class: light
-  state: >-
-    {{ (states('sensor.toilet_trisensor_illuminance') | float) >= (states('input_number.toilet_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.toilet_lights', 'off')) }}
+  attributes:
+    current_illuminance: "{{ (states('sensor.area_toilet_illuminance') | float) }}"
+    light_state: "{{ states('light.toilet_lights') }}"
+    sun: "{{ states('sun.sun') }}"
+  state: "{{ (states('sensor.area_toilet_illuminance') | float) >= (states('input_number.area_toilet_lux_level') | float) and (is_state('sun.sun', 'above_horizon') or is_state('light.toilet_lights', 'off')) }}"
