--- a/templates/binary_sensors/system.yaml
+++ b/templates/binary_sensors/system.yaml
@@ -1,12 +1,12 @@
 ####################################
 # PC Active Sensors
 ####################################
-- unique_id: seb_pc_active
-  name: "Seb PC Active"
+- unique_id: starrunner_active
+  name: "Starrunner Active"
   device_class: connectivity
   state: >-
-    {% if is_state('binary_sensor.seb_pc_online', 'off' ) %}
+    {% if is_state('binary_sensor.starrunner_online', 'off' ) %}
       'off'
     {% else %}
-      {{ states('sensor.time_since_seb_pc_last_active') | int < 5 }}
+      {{ states('sensor.starrunner_idle_time') | int < 5 }}
     {% endif %}
