--- a/automations/bedroom/lights.yaml
+++ b/automations/bedroom/lights.yaml
@@ -6,14 +6,11 @@ mode: queued
 trigger:
   - platform: state
     entity_id:
-      - media_player.bedroom_tv
-      - binary_sensor.bedroom_trisensor_motion
-      - binary_sensor.bedroom_bright
-      - input_boolean.sleep_mode
+      - binary_sensor.area_bedroom_occupied
 
 condition:
   - condition: state
-    entity_id: input_boolean.bedroom_automations
+    entity_id: input_boolean.area_bedroom_automations
     state: "on"
 
 action:
@@ -33,7 +30,7 @@ action:
               entity_id: light.bedroom_lights
     default:
       - condition: state
-        entity_id: binary_sensor.bedroom_trisensor_motion
+        entity_id: binary_sensor.area_bedroom_occupied
         state: "off"
         for: 00:20:00
       - service: light.turn_off
