--- a/automations/lounge/lights.yaml
+++ b/automations/lounge/lights.yaml
@@ -5,28 +5,24 @@ mode: queued
 
 trigger:
   - platform: state
-    entity_id: binary_sensor.lounge_trisensor_motion
-  - entity_id: media_player.lounge_tv
-    platform: state
-  - entity_id: binary_sensor.lounge_bright
-    platform: state
+    entity_id: binary_sensor.area_lounge_occupied
 
 condition:
   - condition: state
-    entity_id: input_boolean.lounge_automations
+    entity_id: input_boolean.area_lounge_automations
     state: "on"
 
 action:
   - choose:
       - conditions:
           - condition: state
-            entity_id: binary_sensor.lounge_trisensor_motion
+            entity_id: binary_sensor.area_lounge_occupied
             state: "on"
           - condition: state
             entity_id: media_player.lounge_tv
             state: "off"
           - condition: state
-            entity_id: binary_sensor.lounge_bright
+            entity_id: binary_sensor.area_lounge_bright
             state: "off"
         sequence:
           - data:
@@ -41,7 +37,7 @@ action:
                 entity_id: media_player.lounge_tv
                 state: "off"
           - condition: state
-            entity_id: binary_sensor.lounge_bright
+            entity_id: binary_sensor.area_lounge_bright
             state: "off"
         sequence:
           - data:
@@ -51,7 +47,7 @@ action:
               entity_id: light.lounge_lights
       - conditions:
           - condition: state
-            entity_id: binary_sensor.lounge_bright
+            entity_id: binary_sensor.area_lounge_bright
             state: "on"
         sequence:
           - service: light.turn_off
