--- a/automations/lounge/lights.yaml
+++ b/automations/lounge/lights.yaml
@@ -4,8 +4,15 @@ description: ""
 mode: queued
 
 trigger:
+  - platform: homeassistant
+    event: start
+  - platform: event
+    event_type: automation_reloaded
   - platform: state
-    entity_id: binary_sensor.area_lounge_occupied
+    entity_id:
+      - binary_sensor.area_lounge_occupied
+      - binary_sensor.area_lounge_bright
+      - input_boolean.area_lounge_automations
 
 condition:
   - condition: state
@@ -16,44 +23,42 @@ action:
   - choose:
       - conditions:
           - condition: state
-            entity_id: binary_sensor.area_lounge_occupied
-            state: "on"
-          - condition: state
-            entity_id: media_player.lounge_tv
-            state: "off"
-          - condition: state
             entity_id: binary_sensor.area_lounge_bright
             state: "off"
-        sequence:
-          - data:
-              brightness_pct: 100
-            service: light.turn_on
-            target:
-              entity_id: light.lounge_lights
-      - conditions:
           - condition: not
             conditions:
               - condition: state
                 entity_id: media_player.lounge_tv
                 state: "off"
+              - condition: state
+                entity_id: media_player.lounge_tv
+                state: "unknown"
+              - condition: state
+                entity_id: media_player.lounge_tv
+                state: "unavailable"
           - condition: state
-            entity_id: binary_sensor.area_lounge_bright
-            state: "off"
+            entity_id: binary_sensor.area_lounge_occupied
+            state: "on"
         sequence:
-          - data:
+          - service: light.turn_on
+            data:
               brightness_pct: 30
-            service: light.turn_on
             target:
               entity_id: light.lounge_lights
       - conditions:
           - condition: state
             entity_id: binary_sensor.area_lounge_bright
+            state: "off"
+          - condition: state
+            entity_id: binary_sensor.area_lounge_occupied
             state: "on"
         sequence:
-          - service: light.turn_off
+          - service: light.turn_on
+            data:
+              brightness_pct: 100
             target:
               entity_id: light.lounge_lights
     default:
       - service: light.turn_off
         target:
-          entity_id: light.lounge_lights
+          area_id: lounge
