--- a/themes/custom/custom.yaml
+++ b/themes/custom/custom.yaml
@@ -1,13 +1,12 @@
 custom:
-
   #default dark mode
-  primary-text-color: '#e1e1e1'
-  primary-background-color: '#111111'
-  secondary-background-color: '#202020'
-  card-background-color: '#1c1c1c'
-  primary-color: '#03a9f4'
+  primary-text-color: "#e1e1e1"
+  primary-background-color: "#111111"
+  secondary-background-color: "#202020"
+  card-background-color: "#1c1c1c"
+  primary-color: "#03a9f4"
   app-header-text-color: var(--primary-text-color)
-  app-header-background-color: '#101e24'
+  app-header-background-color: '#2B374E'
   table-row-background-color: var(--primary-background-color)
   table-row-alternative-background-color: var(--secondary-background-color)
   sidebar-background-color: var(--card-background-color)
@@ -15,49 +14,62 @@ custom:
 
   #edited
   ha-card-box-shadow: none
-  ha-card-background: none
-  grid-card-gap: 5%
-  masonry-view-card-margin: 0px
-  ha-card-header-color: 'rgba(255, 255, 255, 0.8)'
-  ha-card-header-font-family: SF Text
+  ha-card-background: rgba(150, 150, 150, 0.1)
+  grid-card-gap: 0px
+  masonry-view-card-margin: 0.5rem
+  ha-card-header-color: "rgba(255, 255, 255, 0.8)"
   ha-card-header-font-size: 2.4vw
-  state-icon-color: '#9da0a2'
-  state-icon-active-color: '#3182b7'
-  switch-checked-color: '#7a7d7f'
-  switch-unchecked-button-color: '#3b4041'
-  switch-unchecked-track-color: '#0c0d0d'
-  paper-slider-knob-color: '#a4abb1'
-  paper-slider-knob-start-color: '#a4abb1'
-  paper-slider-pin-color: '#626a6f'
-  paper-slider-active-color: '#626a6f'
-  paper-slider-container-color: '#202020'
+  state-icon-color: "#9da0a2"
+  state-icon-active-color: "#3182b7"
+  switch-checked-color: "#7a7d7f"
+  switch-unchecked-button-color: "#3b4041"
+  switch-unchecked-track-color: "#0c0d0d"
+  paper-slider-knob-color: "#a4abb1"
+  paper-slider-knob-start-color: "#a4abb1"
+  paper-slider-pin-color: "#626a6f"
+  paper-slider-active-color: "#626a6f"
+  paper-slider-container-color: "#202020"
   mdc-dialog-scrim-color: rgba(0, 0, 0, 0.5)
   paper-toast-color: var(--primary-text-color)
-  paper-toast-background-color: '#1b1b1bf2'
+  paper-toast-background-color: "#1b1b1bf2"
   vertical-stack-card-margin: 0
+  ha-card-border-radius: 1rem
+
+  # Pantone Colors
+  color-red: "#C24436"
+  color-green: "#62C45D"
+  color-blue: "#3A7BCA"
+  color-purple: "#6D42B6"
+  color-yellow: "#F4E966"
+  color-orange: "#EF8550"
+  color-light: "#FDC870"
 
   #custom variables
-  ha-card-background-color: rgba(34,38,39,0.9)
+  ha-card-background-color: rgba(34,38,39,0.8)
   ha-card-header-background-color: rgba(48,52,52,0.8)
-  custom-layout-card-padding: 3.3vw
-  custom-button-card-border-radius: 8%
   markdown-sidebar-clock-font-size: 5vw
   markdown-sidebar-clock-line-height: 4vw
   markdown-sidebar-font-size: 1.5vw
   markdown-sidebar-line-height: 2.1vw
-
-####################################################
-#                                                  #
-#                     CARD-MOD                     #
-#                                                  #
-####################################################
+  st-font-size-xl: 30px
+  st-font-size-l: 15px
+  st-font-size-m: 12px
+  st-spacing: 0px
+  ####################################################
+  #                                                  #
+  #                     CARD-MOD                     #
+  #                                                  #
+  ####################################################
 
   card-mod-theme: custom
 
   card-mod-root: |
     ha-app-layout {
-      background: url('/local/background.png');
+      background: url('/local/bg.png');
       background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
   card-mod-view-yaml: |
     .: |
@@ -76,13 +88,39 @@ custom:
       padding: 1.8em 2em 1.8em 2em;
     }
     .card-header {
-      font-family: SF Text;
       letter-spacing: 0.005em;
       font-size: 1.6em;
       font-weight: 500;
       padding: 1.25em 0 0 1.68em;
       line-height: initial;
       cursor: default;
+    }
+    /* * * * * * * * * * * * * * * * * *
+      *                                 *
+      *       SLIDER BUTTON CARD        *
+      *                                 *
+      * * * * * * * * * * * * * * * * * */
+    .type-custom-slider-button-card {
+      --slider-color: #FDC870;
+      --paper-item-icon-active-color: #FDC870;
+      --ha-card-background: rgba(52, 99, 145, 0.75);
+      --mdc-icon-size: 1.5em;
+    }
+    /* * * * * * * * * * * * * * * * * *
+      *                                 *
+      *       Atomic Calendar           *
+      *                                 *
+      * * * * * * * * * * * * * * * * * */
+    .event-left
+      background: green;
+    }
+    /* * * * * * * * * * * * * * * * * *
+      *                                 *
+      *       CUSTOM BUTTON CARD        *
+      *                                 *
+      * * * * * * * * * * * * * * * * * */
+    .type-custom-button-card > #container > #img-cell > #icon {
+      filter: drop-shadow(0 0 0.1rem rgba(0,0,0,0.3));
     }
     /* * * * * * * * * * * * * * * * * *
       *                                 *
@@ -116,6 +154,9 @@ custom:
       *            MAP CARD             *
       *                                 *
       * * * * * * * * * * * * * * * * * */
+    #map > div.leaflet-control-container > div.leaflet-bottom.leaflet-right {
+      display: none;
+    }
     .type-map {
       animation: type-map 1s forwards;
     }
@@ -178,7 +219,6 @@ custom:
       }
       .main-title {
         margin-top: 5px;
-        font-family: SF Text;
         letter-spacing: 0.005em;
       }
       mwc-icon-button {
@@ -242,35 +282,3 @@ custom:
         ha-entity-marker {
           opacity: 0.5 !important;
         }
-    #################################################
-    #                                               #
-    #            CUSTOM LIGHT POPUP CARD            #
-    #                                               #
-    #################################################
-    "hui-entities-card$light-popup-card$": |
-      #popup {
-        margin: -2.4em 0 1.4em 0;
-        isolation: isolate;
-      }
-      input[type=range] {
-        cursor: grab;
-      }
-      #brightnessValue {
-        color: rgba(255, 255, 255, 0.8);
-        margin: 1.3vh 0 0 0;
-        font-size: 2em;
-        font-weight: 400;
-        position: absolute;
-        z-index: 100;
-        font-family: SF Display;
-        letter-spacing: 0.02em;
-        pointer-events: none;
-        mix-blend-mode: difference;
-        text-align: center;
-      }
-      #popup>div.range-holder>input[type=range] {
-        --slider-thumb-color: #b4b4b4 !important;
-      }
-      #popup>div.range-holder>input[type=range]::-webkit-slider-thumb {
-        cursor: grabbing;
-      }
